<resources>
    <string name="app_name">ProjetMobile</string>
    <string name="authentification">S\'authentifier</string>
    <string name="Quitter">Quitter</string>
    <string name="Saisir">Saisir</string>
    <string name="Titre">Titre</string>
    <string name="Valider">Valider</string>
    <string name="Retour">Retour</string>
    <string name="Auteur">Auteur</string>
    <string name="AfficherSelection">AfficherSelection</string>
    <string name="AfficherListe">AfficherListe</string>
    <string name="SaisirNouveauLivre">Saisir un nouveau livre</string>
    <string name="ListeLivres">Liste de livres</string>
    <string name="ConnexionBDD">Connexion à la BDD</string>
    <string name="Inscription">S\'inscrire</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="Email">Email</string>
    <string name="Motdepasse">Mot de passe</string>
</resources>