<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthentificationEmail">

    <Button
        android:id="@+id/id_quitter_authentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="33dp"
        android:text="@string/Quitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_mdpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/Motdepasse"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/id_logView"
        app:layout_constraintTop_toBottomOf="@+id/id_logView" />

    <EditText
        android:id="@+id/id_logView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_button_sauthentifier_authentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="27dp"
        android:onClick="onClickSignIn"
        android:text="@string/authentification"
        app:layout_constraintEnd_toEndOf="@+id/id_mdpView"
        app:layout_constraintTop_toBottomOf="@+id/id_mdpView" />

    <Button
        android:id="@+id/id_button_sincrire_sauthentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="66dp"
        android:onClick="onClickInscription"
        android:text="@string/Inscription"
        app:layout_constraintStart_toStartOf="@+id/id_button_sauthentifier_authentification"
        app:layout_constraintTop_toBottomOf="@+id/id_button_sauthentifier_authentification" />

</androidx.constraintlayout.widget.ConstraintLayout>